Fixed wrapping on the groups page

--- a/src/main.less
+++ b/src/main.less
@@ -257,6 +257,8 @@ p { overflow: hidden }
 	border-radius: 4px;
 	display: block;
 	min-height: 86px;
+	white-space: nowrap;
+	overflow: hidden;
 	&:hover {
 		text-decoration: none;
 		border-color:#999;
